# finance-agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-13-finance-agent-phase1.md  2026-03-13-finance-agent-phase2.md  2026-03-13-finance-agent-phase3.md  2026-03-13-finance-agent-phase4.md  2026-03-13-finance-agent-phase5.md  2026-03-13-finance-agent-phase6.md
finance-agent-web/: .env.development  .env.production  index.html  package-lock.json  package.json
finance-agent-web/src/: App.vue  env.d.ts
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  base.py  catalyst.py  data_center.py  data_collection.py  fundamental.py  industry.py  report.py  sentiment.py  thinking.py  valuation.py
src/api/: deps.py  main.py  sse.py
src/communication/: __init__.py  protocol.py  redis_client.py  streams.py
src/data/: duckdb_client.py  lancedb_client.py  sqlite_config.py  tables.py  writer.py
src/orchestrator/: __init__.py  main.py  retry.py  state_machine.py  task_dag.py  trace.py
src/tui/: main.py
tests/: test_base_agent.py  test_config.py  test_protocol.py  test_retry.py  test_state_machine.py  test_task_dag.py  test_trace.py
tests/agents/: test_catalyst.py  test_data_center.py  test_data_collection.py  test_fundamental.py  test_industry.py  test_report.py  test_sentiment.py  test_thinking.py  test_valuation.py
tests/api/: test_sse.py  test_stocks.py  test_tasks.py
tests/data/: test_duckdb_client.py  test_lancedb_client.py  test_sqlite_config.py  test_tables.py  test_writer.py
tests/tui/: test_tui.py
(+43 files in other folders)
